--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
     <title>Document</title>
+    <link rel="stylesheet" href="./homePage.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Audiowide"
     />
   </head>
   <body>
-    <div id="mainContain"></div>
-    <script src="./index.js"></script>
+    <div id="landingPage"></div>
+    <script src="./homePage.js"></script>
   </body>
 </html>
