--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./homePage.css" />
+    <link rel="stylesheet" href="./index.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Audiowide"
@@ -12,6 +12,6 @@
   </head>
   <body>
     <div id="landingPage"></div>
-    <script src="./homePage.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
