--- a/standart.html
+++ b/standart.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="standart.css" />
     <title>Document</title>
     <link
       rel="stylesheet"
@@ -12,6 +12,6 @@
   </head>
   <body>
     <div id="mainContain"></div>
-    <script src="./index.js"></script>
+    <script src="./standart.js"></script>
   </body>
 </html>
